# moth

./: .gitmodules  CMakeLists.txt  README.md  agent-model.html  assert.hh  basic.hh  component.cc  component.hh  condition.cc  condition.hh  control.hh  controlctx.cc  controlctx.hh  cptclass.hh  cptctx.cc  cptctx.hh  data.cc  data.hh  entdef.hh  entity.cc  entity.hh  err.hh  event.hh  expression.cc  expression.hh  json.hh  log.cc  log.hh  main.cc  mgen.cc  mgen.hh  model.py  model_gen.hh  model_gen.py  mrun.hh  notes.org  operation.cc  operation.hh  parse.hh  statement.cc  (+4 more)
components/: agent.json  income_flow.json
example/: fish.json
test/: parse.cc
